--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buy_button"
+        android:id="@+id/buyButton"
         android:layout_width="@dimen/large_button_width"
         android:layout_height="@dimen/large_button_height"
         android:background="@drawable/large_button"
@@ -28,7 +28,7 @@
         app:layout_constraintGuide_begin="272dp" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signup_button"
+        android:id="@+id/signupButton"
         android:layout_width="@dimen/medium_button_width"
         android:layout_height="@dimen/medium_button_height"
         android:background="@drawable/medium_button"
@@ -36,16 +36,16 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="@+id/buy_button" />
+        app:layout_constraintTop_toTopOf="@+id/buyButton" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/signin_button"
+        android:id="@+id/signinButton"
         android:layout_width="@dimen/medium_button_width"
         android:layout_height="@dimen/medium_button_height"
         android:background="@drawable/medium_button"
         android:text="@string/sign_in"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/buy_button"
+        app:layout_constraintBottom_toBottomOf="@+id/buyButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
@@ -65,7 +65,7 @@
         android:paddingStart="@dimen/circle_button_camera_padding"
         android:paddingEnd="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toEndOf="@+id/signin_button" />
+        app:layout_constraintEnd_toEndOf="@+id/signinButton" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
