--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         app:layout_constraintGuide_begin="715dp" />
 
     <EditText
-        android:id="@+id/barcode_text"
+        android:id="@+id/barcodeText"
         android:layout_width="160dp"
         android:layout_height="60dp"
         android:text="Insert a barcode"
@@ -72,7 +72,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/cameraButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/circle_button"
