--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buyButton"
-        android:layout_width="@dimen/large_button_width"
-        android:layout_height="@dimen/large_button_height"
+        android:layout_width="@dimen/largeButtonWidth"
+        android:layout_height="@dimen/largeButtonHeight"
         android:background="@drawable/large_button"
         android:text="@string/buy"
         android:textColor="@color/white"
@@ -29,10 +29,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupButton"
-        android:layout_width="@dimen/medium_button_width"
-        android:layout_height="@dimen/medium_button_height"
+        android:layout_width="@dimen/mediumButtonWidth"
+        android:layout_height="@dimen/mediumButtonHeight"
         android:background="@drawable/medium_button"
-        android:text="@string/sign_up"
+        android:text="@string/signUp"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -40,10 +40,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signinButton"
-        android:layout_width="@dimen/medium_button_width"
-        android:layout_height="@dimen/medium_button_height"
+        android:layout_width="@dimen/mediumButtonWidth"
+        android:layout_height="@dimen/mediumButtonHeight"
         android:background="@drawable/medium_button"
-        android:text="@string/sign_in"
+        android:text="@string/signIn"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/buyButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,20 +65,28 @@
 
     <EditText
         android:id="@+id/barcodeText"
-        android:layout_width="@dimen/large_button_width"
-        android:layout_height="@dimen/circle_button_height"
-        android:text="Insert a barcode"
+        android:layout_width="@dimen/largeButtonWidth"
+        android:layout_height="@dimen/circleButtonHeight"
+        android:hint="Insert a barcode"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/cameraButton"
-        android:layout_width="@dimen/circle_button_width"
-        android:layout_height="@dimen/circle_button_height"
+        android:layout_width="@dimen/circleButtonWidth"
+        android:layout_height="@dimen/circleButtonHeight"
         android:background="@drawable/circle_button"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="@+id/signinButton"
         app:srcCompat="@drawable/ic_baseline_photo_camera_24" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/searchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintStart_toEndOf="@+id/barcodeText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
