--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/buyButton"
         android:layout_width="@dimen/largeButtonWidth"
         android:layout_height="@dimen/largeButtonHeight"
-        android:background="@drawable/large_button"
+        android:background="@drawable/lightblue_large_corner_button"
         android:text="@string/buy"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
@@ -25,13 +25,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="272dp" />
+        app:layout_constraintGuide_percent="0.67" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signupButton"
         android:layout_width="@dimen/mediumButtonWidth"
         android:layout_height="@dimen/mediumButtonHeight"
-        android:background="@drawable/medium_button"
+        android:background="@drawable/green_medium_corner_button"
         android:text="@string/signUp"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/signinButton"
         android:layout_width="@dimen/mediumButtonWidth"
         android:layout_height="@dimen/mediumButtonHeight"
-        android:background="@drawable/medium_button"
+        android:background="@drawable/green_medium_corner_button"
         android:text="@string/signIn"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/buyButton"
@@ -54,39 +54,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="547dp" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="715dp" />
+        app:layout_constraintGuide_percent="0.85" />
 
     <EditText
         android:id="@+id/barcodeText"
-        android:layout_width="@dimen/largeButtonWidth"
+        android:layout_width="0dp"
         android:layout_height="@dimen/circleButtonHeight"
         android:hint="Insert a barcode"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
+        app:layout_constraintStart_toStartOf="@+id/buyButton" />
 
-    <ImageButton
+    <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/cameraButton"
         android:layout_width="@dimen/circleButtonWidth"
         android:layout_height="@dimen/circleButtonHeight"
-        android:background="@drawable/circle_button"
+        android:background="@drawable/red_circle_button"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="@+id/signinButton"
         app:srcCompat="@drawable/ic_baseline_photo_camera_24" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/searchButton"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/mediumButtonWidth"
         android:layout_height="wrap_content"
+        android:background="@drawable/green_medium_corner_button"
         android:text="@string/search"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintStart_toEndOf="@+id/barcodeText" />
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
