--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
             android:textColor="@color/white" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/signinButton2"
+            android:id="@+id/localButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/orange_medium_corner_button"
