--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -28,10 +28,9 @@
         app:layout_constraintGuide_percent="0.85" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/buyDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/choose"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
@@ -40,6 +39,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/receivedItemsRecView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
@@ -53,4 +53,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9" />
+
+    <ImageView
+        android:id="@+id/sadnessImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toStartOf="@+id/guideline15"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toBottomOf="@+id/buyDescription"
+        app:srcCompat="@drawable/ic_baseline_bad_event_sentiment_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
