--- a/app/src/main/res/layout/received_item_row.xml
+++ b/app/src/main/res/layout/received_item_row.xml
@@ -32,7 +32,7 @@
         android:id="@+id/receivedItemChooseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/choose1"
+        android:text="@string/choose"
         android:textSize="15sp"
         android:visibility="gone"/>
 
