--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,15 @@
             android:textColor="@color/white" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/logoutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/green_medium_corner_button"
+            android:text="@string/logout"
+            android:textColor="@color/white"/>
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/localButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
