--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.9" />
+        app:layout_constraintGuide_percent="0.8" />
 
     <ImageView
         android:id="@+id/sadnessImage"
@@ -63,4 +63,15 @@
         app:layout_constraintStart_toStartOf="@+id/guideline14"
         app:layout_constraintTop_toBottomOf="@+id/buyDescription"
         app:srcCompat="@drawable/ic_baseline_bad_event_sentiment_24" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/newProdButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/product"
+        android:textColor="@color/white"
+        android:background="@drawable/green_medium_corner_button"
+        app:layout_constraintEnd_toStartOf="@+id/guideline15"
+        app:layout_constraintStart_toStartOf="@+id/guideline14"
+        app:layout_constraintTop_toBottomOf="@+id/receivedItemsRecView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
