--- a/app/src/main/res/layout/received_item_row.xml
+++ b/app/src/main/res/layout/received_item_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/receivedItemNameButton"
@@ -32,6 +32,7 @@
         android:id="@+id/receivedItemChooseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/lightblue_large_corner_button"
         android:text="@string/choose"
         android:textSize="15sp"
         android:visibility="gone"/>
