--- a/app/src/main/res/layout/local_item_row.xml
+++ b/app/src/main/res/layout/local_item_row.xml
@@ -22,17 +22,17 @@
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/descLocalItemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/purchaseLocalItemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/expirationLocalItemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
