--- a/app/src/main/res/layout/received_item_row.xml
+++ b/app/src/main/res/layout/received_item_row.xml
@@ -26,7 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:textColor="@color/black"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/receivedItemChooseButton"
