added barcode in layout for local items

--- a/app/src/main/res/layout/local_item_row.xml
+++ b/app/src/main/res/layout/local_item_row.xml
@@ -29,6 +29,13 @@
         android:visibility="gone"/>
 
     <TextView
+        android:id="@+id/barcodeDescText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/purchaseLocalItemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
