--- a/app/src/main/res/layout/activity_local_items.xml
+++ b/app/src/main/res/layout/activity_local_items.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".LocalItemsActivity">
 
     <androidx.constraintlayout.widget.Guideline
@@ -47,7 +48,7 @@
         android:id="@+id/localDescText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline19"
         app:layout_constraintEnd_toStartOf="@+id/guideline18"
