--- a/app/src/main/res/layout/scanned_barcode_row.xml
+++ b/app/src/main/res/layout/scanned_barcode_row.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="32sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
 </LinearLayout>
